<resources>
    <string name="app_name">میز خدمت آریا</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">splash Fragment</string>
    <string name="main_fragment_label">main Fragment</string>
    <string name="get_balance_fragment_label">get Balance Fragment</string>
    <string name="get_balance">موجودی حساب</string>
    <string name="card_to_card">انتقال وجه</string>
    <string name="money_transfer">انتقال وجه پایا</string>
    <string name="e_payment_services">پرداخت با بارکد</string>
    <string name="swipe_card_message">لطفا کارت خود را بکشید</string>
    <string name="pin">رمز کارت</string>
    <string name="mabna">بازرگانی مبنا کارت آریا</string>
    <string name="insert_card_message">لطفا کارت خود را درون دستگاه قرار دهید، سپس دکمه تایید را فشار دهید.</string>
    <string name="warning">هشدار</string>
    <string name="done">تایید</string>
    <string name="ready_to_peer_title">آماده اتصال</string>
    <string name="ready_to_peer_text">دستگاه آماده اتصال به سرور می باشد.</string>
    <string name="peer_title">متصل</string>
    <string name="peer_text">دستگاه متصل می باشد.</string>
    <string name="registered_finger_print">اثر انگشت ثبت شده</string>
    <string name="Connection">connection</string>
    <string name="reset">Reset Connection</string>
    <string name="sign">امضا:</string>
    <string name="clear">پاک کردن</string>
    <string name="create_bank_account">افتتاح حساب</string>
    <string name="withdraw">برداشت وجه</string>
    <string name="bill_paid">پرداخت قبوض</string>
    <string name="cba_form_title">فرم افتتاح حساب</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="nid">کد ملی</string>
    <string name="father_name">نام پدر</string>
    <string name="day">روز</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string name="gender">جنسیت</string>
    <string name="address">آدرس</string>
    <string name="postal_code">کد پستی</string>
    <string name="phone">تلفن</string>
    <string name="personal_info">اطلاعات فردی</string>
    <string name="cancel">لغو</string>
    <string name="next">مرحله بعد</string>
    <string name="account_info">اطلاعات حساب</string>
    <string name="account_owner">نام صاحب حساب</string>
    <string name="branch_name">نام شعبه</string>
    <string name="legal_entity">شخصیت حقوقی</string>
    <string name="account_type">نوع حساب</string>
    <string name="withdraw_deposit">برداشت یا واریز وجه</string>
    <string name="wdc_form_title"><![CDATA[فرم برداشت & واریز وجه]]></string>
    <string name="Applicant_info">مشخصات متقاضی</string>
    <string name="amount">مبلغ(ریال)</string>
    <string name="transaction_type">نوع عملیات</string>
    <string name="account_number">شماره حساب</string>
    <string name="ctoc_form_title">انتقال وجه</string>
    <string name="transaction_info">اطلاعات تراکنش</string>
    <string name="transaction_desc">اطلاعات تراکنش\nمبلغ واریزی\n نام گیرنده</string>
    <string name="source_card_number">شماره شبا مبدا</string>
    <string name="target_card_number">شماره شبا مقصد</string>
    <string name="description">توضیحات(اختیاری)</string>
    <string name="cvv2">Cvv2</string>
    <string name="expire_date">تاریخ انقضاء</string>
    <string name="second_password">رمز دوم</string>
    <string name="request_password">درخواست رمز</string>
    <string name="pay">پرداخت</string>
    <string name="successMessage">عملیات مورد نظر \nبا موفقیت به پایان رسید.</string>
    <string name="failMessage">خطایی رخ داده است.</string>
    <string name="finger_print_msg">لطفا انگشت خود را \n بر روی دستگاه اسکنر قرار دهید.</string>
    <string name="qr_msg">لطفا بار کد مورد نظر را در\n مقابل دوربین قرار دهید.</string>
    <string name="scan">اسکن بارکد</string>
    <string name="take_pic">گرفتن عکس</string>
    <string name="please_wait">لطفا کمی صبر کنید....</string>
    <string name="insert_pin">لطفا رمز کارت خود را وارد نمایید</string>
    <string name="destination_card">شماره کارت مقصد</string>
    <string name="insert_dist_card_number">لطفا شماره کارت مقصد و مبلغ را وارد نمایید</string>
    <string name="check_validate">استعلام کارت</string>
    <string name="print_recipte">چاپ رسید</string>
</resources>