<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/bg_gradiant"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.card.MaterialCardView
        android:elevation="2dp"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:shadowDx="0.5"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="0.5dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ctoc_form_title"
                android:textColor="@color/purple_700"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/transaction_desc"
                android:textColor="@color/purple_700"
                android:textSize="20dp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/cvv2"
                    android:id="@+id/tf_cvv2"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:gravity="center"
                        android:id="@+id/et_cvv2"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lines="1"
                        android:maxLength="4"
                        android:textAlignment="gravity"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_expire"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_cvv2"
                    app:layout_constraintWidth_percent="0.5">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/expire_date"
                        android:textColor="@color/purple_700"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/month"
                        android:id="@+id/tf_month"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_width="100dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeWidth="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:gravity="center"
                            android:id="@+id/et_month"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lines="1"
                            android:maxLength="2"
                            android:textAlignment="gravity"
                            android:textSize="20dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/year"
                        android:id="@+id/tf_year"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_width="100dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeWidth="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:gravity="center"
                            android:id="@+id/et_year"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lines="1"
                            android:maxLength="2"
                            android:textAlignment="gravity"
                            android:textSize="20dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/second_password"
                    android:id="@+id/second_password"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintStart_toStartOf="@+id/ll_expire"
                    app:layout_constraintTop_toBottomOf="@+id/ll_expire"
                    app:layout_constraintWidth_percent="0.28">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_second_password"
                        android:inputType="numberPassword"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:lines="1"
                        android:maxLength="6"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/btn_request_password"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:text="@string/request_password"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/second_password"
                    app:layout_constraintEnd_toEndOf="@+id/ll_expire"
                    app:layout_constraintStart_toEndOf="@+id/second_password"
                    app:layout_constraintTop_toTopOf="@+id/second_password" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/btn_confirm"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:text="@string/pay"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/second_password"
                    app:layout_constraintWidth_percent="0.5" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/btn_cancel"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:text="@string/cancel"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
                    app:layout_constraintWidth_percent="0.5"
                    app:strokeColor="@color/purple_500"
                    app:strokeWidth="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
