<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradiant"
    android:layoutDirection="rtl"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:elevation="2dp"
            android:shadowDx="0.5"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="20dp"
            app:strokeColor="@color/design_default_color_primary"
            app:strokeWidth="0.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_qr"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_qr_msg"
                    android:src="@drawable/ic_qr_code_scanner"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_qr_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/qr_msg"
                    android:textColor="@color/purple_700"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/img_qr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_scan"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/btn_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                    app:layout_constraintTop_toBottomOf="@+id/tv_qr_msg"
                    app:layout_constraintWidth_percent="0.3"
                    android:textSize="20dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_scan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/purple_500"
                    android:textSize="20dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>